force-app/main/default/objects/Audit_Finding__c/Audit_Finding__c.object-meta.xml
<CustomObject>
    <description>Child records capturing individual findings from a Safety Audit, including category, severity, and closure status.</description>
    <label>Audit Finding</label>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>