force-app/main/default/objects/Audit_Finding__c/fields/Finding_Status__c.field-meta.xml
<CustomField>
    <fullName>Finding_Status__c</fullName>
    <label>Finding Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Action Taken</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>