force-app/main/default/objects/Audit_Finding__c/fields/Safety_Audit__c.field-meta.xml
<CustomField>
    <fullName>Safety_Audit__c</fullName>
    <label>Safety Audit</label>
    <referenceTo>Safety_Audit__c</referenceTo>
    <relationshipLabel>Audit Findings</relationshipLabel>
    <relationshipName>Audit_Findings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>